src/main/java/macro10/Macro10Parser.java
// Generated from macro10\Macro10Parser.g4 by ANTLR 4.9.1
package macro10;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Macro10Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADC=1, AND=2, ASL=3, BCC=4, BCS=5, BEQ=6, BIT=7, BMI=8, BNE=9, BPL=10, 
		BRK=11, BVC=12, BVS=13, CLC=14, CLD=15, CLI=16, CLV=17, CMP=18, CPX=19, 
		CPY=20, DEC=21, DEX=22, DEY=23, EOR=24, INC=25, INX=26, INY=27, JMP=28, 
		JSR=29, LDA=30, LDX=31, LDY=32, LSR=33, NOP=34, ORA=35, PHA=36, PHP=37, 
		PLA=38, PLP=39, ROL=40, ROR=41, RTI=42, RTS=43, SBC=44, SEC=45, SED=46, 
		SEI=47, STA=48, STX=49, STY=50, TAX=51, TAY=52, TSX=53, TXA=54, TXS=55, 
		TYA=56, CMPI=57, LDAI=58, LDYI=59, SBCI=60, DEFINE=61, FNS=62, IFDIF=63, 
		IFN=64, IFE=65, IRPC=66, PAGE=67, DOUBLESTAR=68, ASSIGN=69, LE=70, GE=71, 
		ARROW=72, NEQ=73, VARASGN=74, BOX=75, DBLQUOTE=76, SEMI=77, COMMA=78, 
		AMPERSAND=79, LPAREN=80, RPAREN=81, LBRACKET=82, RBRACKET=83, COLON=84, 
		MUL=85, DIV=86, PLUS=87, MINUS=88, LOWERTHAN=89, GREATERTHAN=90, EQ=91, 
		BAR=92, DOT=93, BACKSLASH=94, CARET=95, PERCENT=96, IDENTIFIER=97, StringLiteral=98, 
		LETTER=99, INTEGER=100, DIGIT=101, COMMENT=102, WS=103;
	public static final int
		RULE_asm_file = 0, RULE_assembler_instruction_line = 1, RULE_assembler_instruction = 2, 
		RULE_ifdif = 3, RULE_irpc = 4, RULE_macro_definition = 5, RULE_macro_params = 6, 
		RULE_macro_param_list = 7, RULE_macro_param = 8, RULE_created_symbol = 9, 
		RULE_comma_list = 10, RULE_comma_list_element = 11, RULE_mnemonic_line = 12, 
		RULE_mnemonic = 13, RULE_label = 14, RULE_block = 15, RULE_variable_definition = 16, 
		RULE_variable_equality_definition = 17, RULE_param_list = 18, RULE_param = 19, 
		RULE_expr = 20, RULE_macro_call_line = 21, RULE_identifier_list = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"asm_file", "assembler_instruction_line", "assembler_instruction", "ifdif", 
			"irpc", "macro_definition", "macro_params", "macro_param_list", "macro_param", 
			"created_symbol", "comma_list", "comma_list_element", "mnemonic_line", 
			"mnemonic", "label", "block", "variable_definition", "variable_equality_definition", 
			"param_list", "param", "expr", "macro_call_line", "identifier_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'**'", "'=='", "'<='", 
			"'>='", "'=>'", "'/='", "':='", "'<>'", "'\"'", "';'", "','", "'&'", 
			"'('", "')'", "'['", "']'", "':'", "'*'", "'/'", "'+'", "'-'", "'<'", 
			"'>'", "'='", "'|'", "'.'", "'\\'", "'^'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADC", "AND", "ASL", "BCC", "BCS", "BEQ", "BIT", "BMI", "BNE", 
			"BPL", "BRK", "BVC", "BVS", "CLC", "CLD", "CLI", "CLV", "CMP", "CPX", 
			"CPY", "DEC", "DEX", "DEY", "EOR", "INC", "INX", "INY", "JMP", "JSR", 
			"LDA", "LDX", "LDY", "LSR", "NOP", "ORA", "PHA", "PHP", "PLA", "PLP", 
			"ROL", "ROR", "RTI", "RTS", "SBC", "SEC", "SED", "SEI", "STA", "STX", 
			"STY", "TAX", "TAY", "TSX", "TXA", "TXS", "TYA", "CMPI", "LDAI", "LDYI", 
			"SBCI", "DEFINE", "FNS", "IFDIF", "IFN", "IFE", "IRPC", "PAGE", "DOUBLESTAR", 
			"ASSIGN", "LE", "GE", "ARROW", "NEQ", "VARASGN", "BOX", "DBLQUOTE", "SEMI", 
			"COMMA", "AMPERSAND", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COLON", 
			"MUL", "DIV", "PLUS", "MINUS", "LOWERTHAN", "GREATERTHAN", "EQ", "BAR", 
			"DOT", "BACKSLASH", "CARET", "PERCENT", "IDENTIFIER", "StringLiteral", 
			"LETTER", "INTEGER", "DIGIT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Macro10Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Macro10Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Asm_fileContext extends ParserRuleContext {
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<Variable_equality_definitionContext> variable_equality_definition() {
			return getRuleContexts(Variable_equality_definitionContext.class);
		}
		public Variable_equality_definitionContext variable_equality_definition(int i) {
			return getRuleContext(Variable_equality_definitionContext.class,i);
		}
		public List<Mnemonic_lineContext> mnemonic_line() {
			return getRuleContexts(Mnemonic_lineContext.class);
		}
		public Mnemonic_lineContext mnemonic_line(int i) {
			return getRuleContext(Mnemonic_lineContext.class,i);
		}
		public List<Assembler_instruction_lineContext> assembler_instruction_line() {
			return getRuleContexts(Assembler_instruction_lineContext.class);
		}
		public Assembler_instruction_lineContext assembler_instruction_line(int i) {
			return getRuleContext(Assembler_instruction_lineContext.class,i);
		}
		public List<Macro_call_lineContext> macro_call_line() {
			return getRuleContexts(Macro_call_lineContext.class);
		}
		public Macro_call_lineContext macro_call_line(int i) {
			return getRuleContext(Macro_call_lineContext.class,i);
		}
		public Asm_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asm_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterAsm_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitAsm_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitAsm_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asm_fileContext asm_file() throws RecognitionException {
		Asm_fileContext _localctx = new Asm_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_asm_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADC) | (1L << AND) | (1L << ASL) | (1L << BCC) | (1L << BCS) | (1L << BEQ) | (1L << BIT) | (1L << BMI) | (1L << BNE) | (1L << BPL) | (1L << BRK) | (1L << BVC) | (1L << BVS) | (1L << CLC) | (1L << CLD) | (1L << CLI) | (1L << CLV) | (1L << CMP) | (1L << CPX) | (1L << CPY) | (1L << DEC) | (1L << DEX) | (1L << DEY) | (1L << EOR) | (1L << INC) | (1L << INX) | (1L << INY) | (1L << JMP) | (1L << JSR) | (1L << LDA) | (1L << LDX) | (1L << LDY) | (1L << LSR) | (1L << NOP) | (1L << ORA) | (1L << PHA) | (1L << PHP) | (1L << PLA) | (1L << PLP) | (1L << ROL) | (1L << ROR) | (1L << RTI) | (1L << RTS) | (1L << SBC) | (1L << SEC) | (1L << SED) | (1L << SEI) | (1L << STA) | (1L << STX) | (1L << STY) | (1L << TAX) | (1L << TAY) | (1L << TSX) | (1L << TXA) | (1L << TXS) | (1L << TYA) | (1L << CMPI) | (1L << LDAI) | (1L << LDYI) | (1L << SBCI) | (1L << DEFINE) | (1L << FNS) | (1L << IFDIF))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (IFN - 64)) | (1L << (IFE - 64)) | (1L << (IRPC - 64)) | (1L << (PAGE - 64)) | (1L << (PERCENT - 64)) | (1L << (IDENTIFIER - 64)))) != 0)) {
				{
				setState(51);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(46);
					variable_definition();
					}
					break;
				case 2:
					{
					setState(47);
					variable_equality_definition();
					}
					break;
				case 3:
					{
					setState(48);
					mnemonic_line();
					}
					break;
				case 4:
					{
					setState(49);
					assembler_instruction_line();
					}
					break;
				case 5:
					{
					setState(50);
					macro_call_line();
					}
					break;
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assembler_instruction_lineContext extends ParserRuleContext {
		public Assembler_instructionContext assembler_instruction() {
			return getRuleContext(Assembler_instructionContext.class,0);
		}
		public Assembler_instruction_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembler_instruction_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterAssembler_instruction_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitAssembler_instruction_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitAssembler_instruction_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assembler_instruction_lineContext assembler_instruction_line() throws RecognitionException {
		Assembler_instruction_lineContext _localctx = new Assembler_instruction_lineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assembler_instruction_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			assembler_instruction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assembler_instructionContext extends ParserRuleContext {
		public IrpcContext irpc() {
			return getRuleContext(IrpcContext.class,0);
		}
		public IfdifContext ifdif() {
			return getRuleContext(IfdifContext.class,0);
		}
		public Macro_definitionContext macro_definition() {
			return getRuleContext(Macro_definitionContext.class,0);
		}
		public TerminalNode IFE() { return getToken(Macro10Parser.IFE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Macro10Parser.COMMA, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode IFN() { return getToken(Macro10Parser.IFN, 0); }
		public TerminalNode FNS() { return getToken(Macro10Parser.FNS, 0); }
		public TerminalNode PAGE() { return getToken(Macro10Parser.PAGE, 0); }
		public Assembler_instructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembler_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterAssembler_instruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitAssembler_instruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitAssembler_instruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assembler_instructionContext assembler_instruction() throws RecognitionException {
		Assembler_instructionContext _localctx = new Assembler_instructionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assembler_instruction);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IRPC:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				irpc();
				}
				break;
			case IFDIF:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				ifdif();
				}
				break;
			case DEFINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				macro_definition();
				}
				break;
			case IFE:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				match(IFE);
				setState(62);
				expr(0);
				setState(63);
				match(COMMA);
				setState(64);
				block();
				}
				break;
			case IFN:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				match(IFN);
				setState(67);
				expr(0);
				setState(68);
				match(COMMA);
				setState(69);
				block();
				}
				break;
			case FNS:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				match(FNS);
				}
				break;
			case PAGE:
				enterOuterAlt(_localctx, 7);
				{
				setState(72);
				match(PAGE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfdifContext extends ParserRuleContext {
		public TerminalNode IFDIF() { return getToken(Macro10Parser.IFDIF, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(Macro10Parser.COMMA, 0); }
		public IfdifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifdif; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterIfdif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitIfdif(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitIfdif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfdifContext ifdif() throws RecognitionException {
		IfdifContext _localctx = new IfdifContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifdif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(IFDIF);
			setState(76);
			block();
			setState(77);
			block();
			setState(78);
			match(COMMA);
			setState(79);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IrpcContext extends ParserRuleContext {
		public TerminalNode IRPC() { return getToken(Macro10Parser.IRPC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(Macro10Parser.IDENTIFIER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Macro10Parser.COMMA, 0); }
		public IrpcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_irpc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterIrpc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitIrpc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitIrpc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IrpcContext irpc() throws RecognitionException {
		IrpcContext _localctx = new IrpcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_irpc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IRPC);
			setState(82);
			match(IDENTIFIER);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(83);
				match(COMMA);
				}
			}

			setState(86);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_definitionContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(Macro10Parser.DEFINE, 0); }
		public TerminalNode COMMA() { return getToken(Macro10Parser.COMMA, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(Macro10Parser.IDENTIFIER, 0); }
		public MnemonicContext mnemonic() {
			return getRuleContext(MnemonicContext.class,0);
		}
		public Macro_paramsContext macro_params() {
			return getRuleContext(Macro_paramsContext.class,0);
		}
		public Macro_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterMacro_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitMacro_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitMacro_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_definitionContext macro_definition() throws RecognitionException {
		Macro_definitionContext _localctx = new Macro_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_macro_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(DEFINE);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(89);
				match(IDENTIFIER);
				}
				break;
			case ADC:
			case AND:
			case ASL:
			case BCC:
			case BCS:
			case BEQ:
			case BIT:
			case BMI:
			case BNE:
			case BPL:
			case BRK:
			case BVC:
			case BVS:
			case CLC:
			case CLD:
			case CLI:
			case CLV:
			case CMP:
			case CPX:
			case CPY:
			case DEC:
			case DEX:
			case DEY:
			case EOR:
			case INC:
			case INX:
			case INY:
			case JMP:
			case JSR:
			case LDA:
			case LDX:
			case LDY:
			case LSR:
			case NOP:
			case ORA:
			case PHA:
			case PHP:
			case PLA:
			case PLP:
			case ROL:
			case ROR:
			case RTI:
			case RTS:
			case SBC:
			case SEC:
			case SED:
			case SEI:
			case STA:
			case STX:
			case STY:
			case TAX:
			case TAY:
			case TSX:
			case TXA:
			case TXS:
			case TYA:
			case CMPI:
			case LDAI:
			case LDYI:
			case SBCI:
				{
				setState(90);
				mnemonic();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN || _la==IDENTIFIER) {
				{
				setState(93);
				macro_params();
				}
			}

			setState(96);
			match(COMMA);
			setState(97);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_paramsContext extends ParserRuleContext {
		public Macro_param_listContext macro_param_list() {
			return getRuleContext(Macro_param_listContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(Macro10Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(Macro10Parser.RPAREN, 0); }
		public Macro_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterMacro_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitMacro_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitMacro_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_paramsContext macro_params() throws RecognitionException {
		Macro_paramsContext _localctx = new Macro_paramsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_macro_params);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				macro_param_list();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(LPAREN);
				setState(101);
				macro_param_list();
				setState(102);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_param_listContext extends ParserRuleContext {
		public Macro_paramContext macro_param() {
			return getRuleContext(Macro_paramContext.class,0);
		}
		public Macro_param_listContext macro_param_list() {
			return getRuleContext(Macro_param_listContext.class,0);
		}
		public Macro_param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterMacro_param_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitMacro_param_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitMacro_param_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_param_listContext macro_param_list() throws RecognitionException {
		Macro_param_listContext _localctx = new Macro_param_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_macro_param_list);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				macro_param();
				setState(107);
				macro_param_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				macro_param();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_paramContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(Macro10Parser.IDENTIFIER, 0); }
		public Macro_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).enterMacro_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Macro10ParserListener ) ((Macro10ParserListener)listener).exitMacro_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Macro10ParserVisitor ) return ((Macro10ParserVisitor<? extends T>)visitor).visitMacro_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_paramContext macro_param() throws RecognitionException {
		Macro_paramContext _localctx = new Macro_paramContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_macro_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
